--- a/nosotros.html
+++ b/nosotros.html
@@ -224,7 +224,53 @@
 
 		</div>
 
-		<div class=""></div>
+		<div class="situation">
+			<div class="container-sm">
+				<h1>RESOLVEMOS TU SITUACIÓN ENERGÉTICA</h1>
+				<div class="situation__grid">
+
+					<div class="situation__grid__item">
+
+						<div class="situation__grid__item__logo">
+							<img src="./img/estudio.png" alt="studio" width="100%" height="100%" />
+						</div>
+						<h2>ESTUDIO</h2>
+						<p>Pensando en el bienestar de nuestra gente,analizamos la situación actual energética
+							para brindarle una solución efectiva de largoplazo y cuidando el valor de su bolsillo.</p>
+					</div>
+
+					<div class="situation__grid__item">
+
+						<div class="situation__grid__item__logo">
+							<img src="./img/desarrollo.png" alt="desarrollo" width="100%" height="100%" />
+						</div>
+						<h2>DESARROLLO</h2>
+						<p>Con base al estudio previo, desarrollamos ycuantificamos los ahorros potenciales, así
+							como el impacto económico en su aplicación.</p>
+					</div>
+
+					<div class="situation__grid__item">
+
+						<div class="situation__grid__item__logo">
+							<img src="./img/aplicacion.png" alt="studio" width="100%" height="100%" />
+						</div>
+						<h2>APLICACIÓN</h2>
+						<p>Contamos con personal capacitado parallevar a cabo la tarea de aplicar desarrollos
+							y tomando en cuenta las medidasanalizadas anteriormente.</p>
+					</div>
+
+					<div class="situation__grid__item">
+
+						<div class="situation__grid__item__logo">
+							<img src="./img/monitoreo.png" alt="studio" width="100%" height="100%" />
+						</div>
+						<h2>MONITOREO</h2>
+						<p>Mediante un monitoreo de margen de consumomantenemos el aprovechamiento de la energía
+							eléctrica.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 	</main>
 
