--- a/galeria.html
+++ b/galeria.html
@@ -282,26 +282,23 @@
 
                 <div class="carousel catalog__carousel_termico">
                     <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
+                    <div class="carousel-item"><img src="./img/termico-s/image-11.jpg"></div>
+                    <div class="carousel-item"><img src="./img/termico-s/image-12.jpg"></div>
+                    <div class="carousel-item"><img src="./img/termico-s/image-13.jpg"></div>
+                    <div class="carousel-item"><img src="./img/termico-s/image-14.jpg"></div>
+                    <div class="carousel-item"><img src="./img/termico-s/image-15.jpg"></div>
+                    <div class="carousel-item"><img src="./img/termico-s/image-16.jpg"></div>
+                    <div class="carousel-item"><img src="./img/termico-s/image-17.jpg"></div>
+                    <div class="carousel-item"><img src="./img/termico-s/image-18.jpg"></div>
                 </div>
 
                 <div class="carousel catalog__carousel_ilumination">
-                    <div class="carousel-item"><img src="./img/termico-s/image-12.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-12.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-12.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-12.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/termico-s/image-10.jpg"></div>
+                    <div class="carousel-item"><img src="./img/iluminacion/image-19.jpg"></div>
+                    <div class="carousel-item"><img src="./img/iluminacion/image-20.jpg"></div>
+                    <div class="carousel-item"><img src="./img/iluminacion/image-21.jpg"></div>
+                    <div class="carousel-item"><img src="./img/iluminacion/image-22.jpg"></div>
+                    <div class="carousel-item"><img src="./img/iluminacion/image-23.jpg"></div>
+                    <div class="carousel-item"><img src="./img/iluminacion/image-24.jpg"></div>
                 </div>
             </div>
         </div>
